# codecrafters-kafka-rust

./: Cargo.toml  README.md  clippy.toml  codecrafters.yml
encode-decode-derive/: Cargo.toml
encode-decode-derive/src/: decode.rs  encode.rs  lib.rs
encode-derive/: Cargo.toml
encode-derive/src/: lib.rs
src/: main.rs  server.rs
src/api/: api_versions.rs  describe_topic_partitions.rs  fetch.rs  mod.rs
src/common/: buf.rs  mod.rs  model.rs
src/log/: mod.rs
