[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.84"

[dependencies]
anyhow = "1.0.95"                                     # error handling
bytes = "1.9.0"                                       # helps manage buffers
strum = { version = "0.26.3", features = ["derive"] } # enum utils
thiserror = "2.0.11"                                  # error handling

[lints.clippy]
#################################### Warns #####################################
#--- suspicious, complexity, perf & style groups are warn-by-default
#--- set entire pedantic group to warn (pedantic is intended for opt-outs)
pedantic = { level = "warn", priority = -1 }
#--- set selective lints from restriction group to warn (restriction is intended for opt-ins)
# restriction = { level = "warn", priority = -1 }
unwrap_used = "warn"
unused_trait_names = "warn"
# unseparated_literal_suffix = "warn" # TODO: Enable once tests are refactored to using request model
absolute_paths = "warn" # clippy config: `absolute-paths-max-segments = 2`
# use_debug = "warn"

#################################### Allows ####################################
#--- set selective lints from pedantic group to allow
map_unwrap_or = "allow" # This reduces readability; see https://github.com/rust-lang/rust-clippy/issues/10428

[dev-dependencies]
indoc = "2.0.5"
